2012-11-18  Nikita V. Konstantinov

	* meta/types/ObjectType.class.php:
		update for Business objects - now you can setSomeProperty(null)
		for Objects properties if it's not required

2012-09-26	Alexey S. Denisov

	* core/Form/Form.class.php:
		added to Form methods markMissing, markWrong, markCustom
		optional argument "label" to set it without calling special method add*Label

2012-09-18	Evgeniy Tekalin

	* main/Utils/AMQP/AMQP.class.php,
	main/Utils/AMQP/AMQPBaseChannel.class.php,
	main/Utils/AMQP/AMQPBaseMessage.class.php,
	main/Utils/AMQP/AMQPChannelInterface.class.php,
	main/Utils/AMQP/AMQPPool.class.php,
	main/Utils/AMQP/Pecl/AMQPPecl.class.php,
	main/Utils/AMQP/Pecl/AMQPPeclBaseBitmask.class.php,
	main/Utils/AMQP/Pecl/AMQPPeclChannel.class.php,
	main/Utils/AMQP/AMQPInterface.class.php,
	main/Utils/AMQP/Pecl/AMQPPeclIncomingMessageAdapter.class.php,
	main/Utils/AMQP/Pecl/AMQPPeclQueueConsumer.class.php,
	main/Utils/AMQP/AMQPProxyChannel.class.php,
	main/Utils/AMQP/AMQPSelective.class.php,
	test/main/Utils/AMQP/AMQPPeclTest.class.php:
		added support for pecl amqp 1.0.4

2012-09-06	Igor V. Gulyaev

	* main/Base/Hstore.class.php
		test/main/HstoreTest.class.php: fix hstore key exist check

2012-08-28	Artem A. Naumenko

	* main/Net/GenericUri.class.php: utf modifier added to RegExp pattern

2012-08-10	Alexey S. Denisov

	* core/DB/PostgresDialect.class.php:
		fix incorrect bytea escaping for Postgres 9.1+

2012-08-08	Artem A. Naumenko

	* core/DB/NoSQL/RedisNoSQL.class.php

	added campability with old version of redis servers

2012-07-20	Alexey S. Denisov

	* main/Utils/ClassUtils.class.php: fix for php 5.4 support

2012-07-11	Artem A. Naumenko

	* core/Cache/ListGenerator.class.php, core/DB/NoSQL/RedisNoSQL.class.php:
	redis nosql became lazy

2012-07-08	Alexey S. Denisov

	* main/Base/Hstore.class.php: hstore fix and tests update

2012-06-29	N. Konstantinov

	* core/DB/PgSQL.class.php
		test/core/DbConnectionTest.class.php:
